--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
-- 👋 Hi, I’m Colchoo (Faruk Kaplan)
+- 👋 Hi, I’m Faruk Kaplan
 - 👀 I’m here for learn something 
 - 🌱 I’m currently student in universty (CS Department)
 - 💞️ I’m looking to collaborate on anything
